# toggldesktop

./: CMakeLists.txt  README.md  run-mac.sh
.github/workflows/: android-ci.yml  android-release.yml  browser-extension.yml  desktop-ci.yml  desktop-release.yml  flutter.yml  ios-release.yml  main.yml  release.yml  update-cask.yml
Casks/: redtick.rb
app/: .gitignore  Gemfile  README.md  ffigen.yaml  pubspec.yaml
app/android/: .gitignore
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/cz/syky/redtick/redtick/: MainActivity.kt
app/android/app/src/main/res/values-night-v31/: styles.xml
app/android/app/src/main/res/values-v31/: styles.xml
app/assets/: cacert.pem
app/fastlane/: Appfile  Fastfile  Matchfile
app/ios/RedtickLiveActivity/: README.md  RedtickLiveActivity.swift  RedtickLiveActivityBundle.swift
app/ios/Runner/: AppDelegate.swift  Info.plist  Runner.entitlements
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/src/data/: http_log.dart  offline_queue.dart  redmine_api_client.dart  redmine_service.dart  release_watch_service.dart
app/lib/src/models/: time_entry.dart
app/lib/src/native/: cacert.dart  core_service.dart  rt_bridge.dart  toggl_api_generated.dart  toggl_bindings.dart  toggl_library.dart
app/lib/src/platform/: background_reconcile.dart  deep_link.dart  idle.dart  idle_log.dart  live_timer.dart  live_timer_android.dart  live_timer_ios.dart  log_file.dart  notifications.dart  window.dart
app/lib/src/state/: db_path.dart  logging_settings.dart  multi_task_settings.dart  providers.dart  release_watch.dart  report_summary.dart  theme_mode.dart  view_settings.dart
app/lib/src/ui/: app.dart  theme.dart
app/lib/src/ui/screens/: calendar_screen.dart  home_shell.dart  login_screen.dart  reports_screen.dart  settings_screen.dart  time_entries_screen.dart  time_entry_editor_screen.dart
app/lib/src/ui/widgets/: entry_bits.dart  entry_rows.dart  idle_prompt.dart  issue_picker.dart  redtick_logo.dart  release_update_banner.dart  reminder_watcher.dart  running_start_editor.dart  time_entry_tile.dart  timer_bar.dart
app/lib/src/util/: project_color.dart
app/linux/: CMakeLists.txt
app/linux/runner/: CMakeLists.txt  my_application.cc
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/macos/Runner/: Info.plist  MainFlutterWindow.swift  Release.entitlements
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/native/: CMakeLists.txt  bridge.c  bridge.h  get_focused_window_stub.cc
app/native/android/: build-deps.sh
app/native/ios/: .gitignore  README.md  build-deps-ios.sh
app/packaging/linux/: redtick.desktop
app/test/: app_window_test.dart  custom_field_mode_test.dart  deep_link_parse_test.dart  entry_rows_test.dart  ffi_smoke_test.dart  http_log_client_test.dart  http_log_test.dart  idle_arming_test.dart  logging_settings_test.dart  multi_task_settings_test.dart  offline_queue_test.dart  project_color_test.dart  redmine_api_client_test.dart  redmine_concurrent_test.dart  redmine_deep_link_test.dart  redmine_service_test.dart  redmine_timer_test.dart  redmine_write_test.dart  release_update_banner_test.dart  release_watch_test.dart  reminder_watcher_test.dart  report_summary_test.dart  reports_screen_test.dart  running_start_editor_test.dart  time_entry_tile_test.dart  widget_test.dart
app/windows/: CMakeLists.txt
app/windows/flutter/: generated_plugins.cmake
app/windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
docs/: ANDROID_RELEASE.md  RELEASE_SIGNING.md
docs/flutter-port/: IMPLEMENTATION_PLAN.md  LIVE_SURFACES.md  REDMINE_API_CONTRACT.md  adr-0001-state-management.md  platform-features.md
docs/store/: listing.md  privacy-policy.md  submission-checklist.md
extension/: README.md  content.js  manifest.json  options.html  options.js  popup.html  popup.js
src/: CMakeLists.txt  const.h  context.cc  context.h  gui.cc  gui.h  https_client.cc  redmine_client.cc  redmine_client.h  toggl_api.cc  toggl_api.h  toggl_api_private.cc  urls.cc  urls.h
src/database/: database.cc  database.h  migrations.cc
src/model/: settings.cc  settings.h  time_entry.cc  time_entry.h  user.cc  user.h
src/test/: toggl_api_test.cc
src/ui/linux/TogglDesktop/: CMakeLists.txt  Resources.qrc  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  autocompletecombobox.cpp  autocompletecombobox.h  calendarview.cpp  calendarview.h  clickablelabel.cpp  idlenotificationwidget.cpp  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  mainwindowcontroller.cpp  mainwindowcontroller.h  mainwindowcontroller.ui  overlaywidget.cpp  powermanagement.cpp  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  settingsview.h  systemtray.cpp  timeentrycellwidget.cpp  timeentrycellwidget.h  timeentrycellwidget.ui  timeentryeditorwidget.cpp  timeentryeditorwidget.h  timeentryeditorwidget.ui  timeentrylistwidget.cpp  timeentrylistwidget.ui  timeentryview.cpp  timeentryview.h  timerwidget.cpp  timerwidget.ui  toggl.cpp  toggl.h
